[package]
name = "engine2d"
version = "0.1.0"
authors = ["jknaudt21 <jknaudt21@cmc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.2.0"
winit = "0.22.0"
winit_input_helper = "0.6.0"
image = "0.23.12"
rand = "0.7.3"